--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
 
   <!-- this is the existing stylesheet - NOT created with SASS. Use this as a reference -->
-  <link rel="stylesheet" href="css/custom.css">
+  <link rel="stylesheet" href="css/master.css">
 
   <!-- rebuild the stylesheet with SASS using modules. When you're done, link in the new compiled CSS file -->
   <!-- <link rel="stylesheet" href="css/path-to-compiled-sheet.css" -->
@@ -95,7 +95,7 @@
           </div>
         </section>
 
-        <!-- STOP HERE - YOUR SASS REBUILD IS DONE -->
+        <!--****************************** STOP HERE - YOUR SASS REBUILD IS DONE *****************************************-->
 
         <!-- Bottom Panel -->
         <section id="bottomPanel" class="row">
